Solve errors in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -72,6 +72,7 @@ profiles {
   singularity {
     singularity.enabled = true
     singularity.autoMounts = true
+    }
 }
 
 // Avoid this error:
@@ -99,10 +100,10 @@ dag {
 }
 
 manifest {
-  name = 'Flomics/rnaseq'
-  author = 'Phil Ewels, Rickard Hammarén'
-  homePage = 'https://github.com/Flomics/rnaseq'
-  description = 'Nextflow RNA-Seq analysis pipeline, Flomics adaptation from the rnaseq nf-core community.'
+  name = 'mpozud00/demultiplexing'
+  author = 'Marta Pozuelo'
+  homePage = 'https://github.com/mpozud00/demultiplexing'
+  description = 'Nextflow demultiplexing pipeline.'
   mainScript = 'main.nf'
   nextflowVersion = '>=19.04.0'
   version = '1.0.0'
