--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,6 @@ channels:
   - defaults
 
 dependencies:
-  - python=3.6.7
+  - python=3.6.10
   - fastqc=0.11.8
-  - cutadapt=2.6
+  - bioconda::cutadapt=3.0
