--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
  * -------------------------------------------------
- *  Flomics/rnaseq Nextflow config file
+ *  mpozud00/demultiplexing Nextflow config file
  * -------------------------------------------------
  * Default config options for all environments.
  */
@@ -36,16 +36,10 @@ params {
   name = false
   publish_dir_mode = 'copy'
   multiqc_config = "$baseDir/assets/multiqc_config.yaml"
-  email = false
-  email_on_fail = false
-  max_multiqc_email_size = 25.MB
-  plaintext_email = false
   monochrome_logs = false
   help = false
   igenomes_base = "./iGenomes"
   tracedir = "${params.run}/pipeline_info"
-  awsqueue = false
-  awsregion = 'eu-west-1'
   igenomesIgnore = false
   custom_config_version = 'master'
   custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
