change docker image to new name of repository

--- a/nextflow.config
+++ b/nextflow.config
@@ -92,7 +92,7 @@ dag {
 }
 
 manifest {
-  name = 'mpozud00/demultiplexing'
+  name = 'mpozuelo/demultiplexing'
   author = 'Marta Pozuelo'
   homePage = 'https://github.com/mpozud00/demultiplexing'
   description = 'Nextflow demultiplexing pipeline.'
