--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,9 @@
 params {
 
   // Pipeline Options
+  // Files
+  cluster_path = "/datos/ngs/dato-activo"
+
   // Demultiplexing
   max_errors = 0.15
   save_untrimmed = false
@@ -72,6 +75,7 @@ profiles {
 docker.runOptions = '-u \$(id -u):\$(id -g)'
 
 // Capture exit codes from upstream processes when piping
+process.executor = 'slurm'
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
