--- a/nextflow.config
+++ b/nextflow.config
@@ -54,7 +54,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'mpozud00/demultiplexing:1.0'
+process.container = 'mpozuelo/demultiplexing:latest'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
