--- a/nextflow.config
+++ b/nextflow.config
@@ -76,6 +76,7 @@ docker.runOptions = '-u \$(id -u):\$(id -g)'
 
 // Capture exit codes from upstream processes when piping
 process.executor = 'slurm'
+process.queue = 'short'
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
