--- a/nextflow.config
+++ b/nextflow.config
@@ -67,6 +67,7 @@ profiles {
   singularity {
     singularity.enabled = true
     singularity.autoMounts = true
+    singularity.engineOptions = "--debug"
     }
 }
 
