--- a/nextflow.config
+++ b/nextflow.config
@@ -66,6 +66,7 @@ profiles {
   docker { docker.enabled = true }
   singularity {
     singularity.enabled = true
+    singularity.engineOptions = "-B /datos/ngs/dato-activo/:/datos/ngs/dato-activo/"
     singularity.autoMounts = true
     }
 }
