Update options of singularity

--- a/nextflow.config
+++ b/nextflow.config
@@ -66,8 +66,7 @@ profiles {
   docker { docker.enabled = true }
   singularity {
     singularity.enabled = true
-    //singularity.engineOptions = "exec -B /datos/ngs/dato-activo/:/datos/ngs/dato-activo/"
-    singularity.autoMounts = true
+    singularity.runOptions = "-B /datos/ngs/dato-activo/:/datos/ngs/dato-activo/"
     }
 }
 
